[gd_scene format=3 uid="uid://noqc6sl7fqcx"]

[ext_resource type="Script" uid="uid://5wv6pq8is21b" path="res://scenes/outro_cutscene.gd" id="1_taxb5"]
[ext_resource type="Texture2D" uid="uid://cie10mi1so117" path="res://assets/placeholders/starship.png" id="2_m832k"]

[sub_resource type="Animation" id="Animation_wifpd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Starship:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(271, -73)]
}

[sub_resource type="Animation" id="Animation_taxb5"]
resource_name = "starship_arrival"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Starship:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(271, -73), Vector2(271, 118)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wifpd"]
_data = {
&"RESET": SubResource("Animation_wifpd"),
&"starship_arrival": SubResource("Animation_taxb5")
}

[node name="OutroCutscene" type="CanvasLayer" unique_id=620946400]
script = ExtResource("1_taxb5")

[node name="Label" type="Label" parent="." unique_id=917418589]
offset_left = 18.0
offset_top = 11.0
offset_right = 89.0
offset_bottom = 34.0
text = "Cutscene"

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1723954350]
unique_name_in_owner = true
libraries/ = SubResource("AnimationLibrary_wifpd")

[node name="Starship" type="Sprite2D" parent="." unique_id=1296061947]
position = Vector2(271, -73)
texture = ExtResource("2_m832k")

[node name="EndGameUI" type="Control" parent="." unique_id=693339701]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="EndGameUI" unique_id=597080770]
layout_mode = 0
offset_left = 122.0
offset_top = 123.0
offset_right = 400.0
offset_bottom = 190.0
theme_override_font_sizes/font_size = 48
text = "Endgame UI"

[node name="ContinueButton" type="Button" parent="EndGameUI" unique_id=1799089059]
unique_name_in_owner = true
layout_mode = 0
offset_left = 417.0
offset_top = 271.0
offset_right = 496.0
offset_bottom = 302.0
text = "Continue"

[node name="Label2" type="Label" parent="EndGameUI" unique_id=1067267690]
layout_mode = 0
offset_left = 207.0
offset_top = 202.0
offset_right = 278.0
offset_bottom = 225.0
text = "Score..."

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="EndGameUI/ContinueButton" to="." method="_on_continue_button_pressed"]
